fix Prestamo y Devolucion